[package]
name = "routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barrage = "0.2.3"
bitflags = "1.3.2"
either = "1.8.1"
flume = "0.10.14"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
