[package]
name = "routing-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.16"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
routing = { path = "../lib"}
tracing = "0.1.37"
flume = "0.10.14"
clap = {version = "4.1.6", features = ["derive"]}
prettytable = "0.10"
chrono = "0.4.23"
ctrlc = "3.2.5"
